5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1637_2443.log
== TEST (2019-04-09 19:59:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3

if(opcao == 1):
	print(v_calota)
else(opcao == 2):
	print(v_esfera - v_calota)
-- ERROR:
File "XXXX", line 15
    else(opcao == 2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:00:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3

if(opcao == 1):
	print(v_calota)
if(opcao == 2):
	print(v_esfera - v_calota)
-- OUTPUT:
9.025664794069577
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:01:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3

if(opcao == 1):
	print(round(v_calota,4))
if(opcao == 2):
	print(round(v_esfera - v_calota,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:01:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3

if(opcao == 1):
	print(round(v_calota,4))
if(opcao == 2):
	print(round(v_esfera - v_calota,4))
-- EXECUTION TIME:
0.156992
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:06:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3


if(opcao == 2):
	print(round(v_esfera - v_calota,4))
else:
	print(round(v_calota,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:07:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3


if(opcao == 2):
	print(round(v_esfera - v_calota,4))
else:
	print(round(v_calota,4))
-- EXECUTION TIME:
0.170795
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:07:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3


if(opcao == 2):
	print(round(v_esfera - v_calota,4))
else:
	print(round(v_calota,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:07:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("Valor do raio:"))
alt = float(input("Valor da altura:"))
opcao = float(input("Volume de ar (1) Volume do combustivel (2):"))

v_esfera = (4 * pi * r**3)/3
v_calota = ((pi * alt**2) * (3*r - alt))/3


if(opcao == 2):
	print(round(v_esfera - v_calota,4))
else:
	print(round(v_calota,4))
-- EXECUTION TIME:
0.14224
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
